--- a/springapp/pom.xml
+++ b/springapp/pom.xml
@@ -33,11 +33,18 @@
         <artifactId>spring-boot-starter-data-jpa</artifactId>
     </dependency>
 
+<dependency>
+    <groupId>javax.validation</groupId>
+    <artifactId>validation-api</artifactId>
+    <version>2.0.1.Final</version>
+</dependency>
+
+
     <!-- Spring Boot Starter Security -->
-    <dependency>
+    <!-- <dependency>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-security</artifactId>
-    </dependency>
+    </dependency> -->
 
     <!-- MySQL Driver -->
     <dependency>
